# Tianjun-Engine

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  restart_tianjun.bat  start_tianjun.bat
configs/: sim_cluster.example.json  tianjun.example.toml
data/dci_reference/: README.md  dci_graph_samples.manifest.json
data/dci_reference/raw/: dci-fault-20260527.jsonl  dci-fault-20260528.jsonl  dci-fault-20260529.jsonl  dci-fault-20260530.jsonl  dci-normal-20260527.jsonl  dci-normal-20260528.jsonl  dci-normal-20260529.jsonl  dci-normal-20260530.jsonl
data/dci_reference/validation/: dci-validation-fault-active-20260622.jsonl  dci-validation-normal-20260621.jsonl
data/trained_models/: MODEL_MANIFEST.json  graphsage_stability_model.pt  graphsage_stability_report.json  lstm_latency_model.pt  lstm_latency_report.json  microservice_latency_model.json  microservice_latency_report.json
data/trained_models/dci_reference/: graphsage_stability_model.pt  graphsage_stability_report.json
examples/cloudsimplus/: README.md
html_dashboard/: dashboard.html
scripts/: build_dci_graph_dataset.py  train_dci_graphsage.py
src/tianjun/: __init__.py  cli.py
src/tianjun/agent_tools/: __init__.py  cluster_tools.py  explanation_tools.py  feedback_tools.py  hermes_plugin.py  policy_tools.py  tool_schema.py
src/tianjun/application/: bootstrap.py  control_plane.py
src/tianjun/chat/: __init__.py  runtime.py
src/tianjun/config/: __init__.py  loader.py  paths.py  schema.py  secrets.py
src/tianjun/core/: __init__.py  (+1 more)
tests/: test_physical_topology.py
(+49 files in other folders)
