[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tianjun-engine"
version = "0.1.0"
description = "LLM-first compute-network policy agent with deterministic scheduling, Hermes MCP tools and execution feedback"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["tomli>=2.0; python_version < '3.11'"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
mcp = ["fastmcp>=2.0"]
ml = ["torch>=2.1,<3"]
ml-runtime = ["torch>=2.1,<3"]
ml-train = [
    "numpy>=1.26,<3",
    "torch>=2.1,<3",
]

[project.scripts]
tianjun = "tianjun.cli:main"
tianjun-mcp-server = "tianjun.integrations.mcp_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
